--- a/home.html
+++ b/home.html
@@ -117,246 +117,254 @@
       </div>
     </div>
     <!-- End Navbar Area -->
-
-    <div class="featured-area pt-100 pb-70">
-      <div class="head-home-ab show-mobile">
-        <img src="./assets/images/home-img.png" class="head-home" alt="img" />
-      </div>
-      <div class="container">
-        <div class="row align-items-center mb-45">
-          <div class="col-lg-12 col-md-12">
-            <div class="fea-img hide-mobile">
-              <img src="./assets/images/had.png" class="fea-w-280" alt="img" />
-            </div>
-            <div class="fea-hand-img hide-mobile">
-              <img
-                src="./assets/images/hand.png"
-                class="fea-hand-w"
-                alt="img"
-              />
-            </div>
-            <div class="mt-110 hide-mobile">&nbsp;</div>
-
-            <div class="section-title text-center pl-250 mt-rs-20">
-              <span class="header-text header-text-home">من نحن؟</span>
-
-              <p class="text-26-home">
-                إن HMF تطبيق يقدم لكم لأول مرة أكبر تجمع للأسر المنتجة لأجود
-                المنتجات الغذائية، من خلالنا تستطيع تقديم خدمات تجارية ناجحة و
-                مربحة. نساعدكم في الوصول لأشهى وأطيب الأطباق المحضرة منزلياً على
-                بعد أمتار منكم نود أن نشارككم اللحظة الفريدة لتذوق ما تبرع في
-                صنعه الأيادي الماهرة.
-              </p>
-            </div>
-          </div>
+    <div class="hom">
+      <div class="featured-area pt-100 pb-70">
+        <div class="head-home-ab show-mobile">
+          <img src="./assets/images/home-img.png" class="head-home" alt="img" />
         </div>
-      </div>
-
-      <div class="home-green-30">&nbsp;</div>
-      <div class="home-gray-30">&nbsp;</div>
-    </div>
-
-    <div class="featured-area pt-100 mb-100 pb-70">
-      <div class="container">
-        <div class="third-top-img">
-          <img
-            src="./assets/images/third-top.png"
-            class="thi-t-img"
-            alt="img"
-          />
-        </div>
-        <div class="row align-items-center mb-45">
-          <div class="col-lg-12 col-md-12">
-            <div class="third-g-30">&nbsp;</div>
-            <div class="mt-100 hide-mobile">&nbsp;</div>
-            <div class="mt-140 show-mobile">&nbsp;</div>
-            <div class="mt-1 show-mobile">&nbsp;</div>
-            <div class="mt-1 show-mobile">&nbsp;</div>
-            <div class="mt-1 show-mobile">&nbsp;</div>
-            <div class="section-title pt-100 text-center mt-rs-20">
-              <span class="header-text-second">أسئلة شائعة ؟</span>
-              <div class="f-left-home-arrow">
+        <div class="clearrx show-mobile">&nbsp;</div>
+        <div class="container">
+          <div class="row align-items-center mb-45">
+            <div class="col-lg-12 col-md-12">
+              <div class="fea-img hide-mobile">
                 <img
-                  src="./assets/images/right.png"
-                  class="f-left-home-arrow-img"
+                  src="./assets/images/had.png"
+                  class="fea-w-280"
                   alt="img"
                 />
               </div>
-              <div class="f-right-home-arrow">
+              <div class="fea-hand-img hide-mobile">
                 <img
-                  src="./assets/images/right.png"
-                  class="f-right-home-arrow-img"
+                  src="./assets/images/hand.png"
+                  class="fea-hand-w"
                   alt="img"
                 />
               </div>
-              <h1 class="des">هل HMF تطبيق لتوصيل الطعام؟</h1>
-              <div class="fourth-img-des">
-                <img
-                  src="./assets/images/fourth-img.png"
-                  class="fourth-w"
-                  alt="img"
-                />
-              </div>
-              <p class="text-26-des">
-                نعمل كوسيط بين الأسر المنتجة والعميل وقد تتوفر لدى بعض الأسر
-                المنتجة خدمة التوصيل، نقوم بتسهيل عملية التواصل، وتنتهي معاناتك
-                في البحث عن طعام منزلي بجودة ممتازة بضغطة زر واحدة.
-              </p>
-              <div class="fourth-des-text">
-                <img
-                  src="./assets/images/fourth.png"
-                  class="fourth-des-width"
-                  alt="img"
-                />
-              </div>
-              <div class="img-green-home">&nbsp;</div>
-            </div>
-            <div class="home-green-sec-30">&nbsp;</div>
-            <div class="img-gray-home hide-mobile">&nbsp;</div>
-          </div>
-        </div>
-      </div>
-    </div>
-    <div class="testimonials-area pb-100 mb-5">
-      <div class="container">
-        <div class="fif-gr-30">&nbsp;</div>
-        <div class="section-title mb-45 slider-home-testimonial text-center">
-          أراء العملاء
-        </div>
-        <div class="testimonials-slider owl-carousel owl-theme">
-          <div class="testimonials-item">
-            <img src="assets/images/pic.png" alt="testimonials" />
-            <h1 class="text-center testimonial-header-text">username</h1>
-            <p>
-              هذا النص هو مثال لنص يمكن أن يستبدل في نفس المساحة، لقد تم توليد
-              هذا النص من مولد النص العربى، حيث يمكنك أن تولد مثل هذا النص أو
-              العديد من النصوص الأخرى إضافة إلى زيادة عدد الحروف التى يولدها
-              التطبيق.
-            </p>
-          </div>
-          <div class="testimonials-item">
-            <img src="assets/images/pic.png" alt="testimonials" />
-            <h1 class="text-center testimonial-header-text">username</h1>
-            <p>
-              هذا النص هو مثال لنص يمكن أن يستبدل في نفس المساحة، لقد تم توليد
-              هذا النص من مولد النص العربى، حيث يمكنك أن تولد مثل هذا النص أو
-              العديد من النصوص الأخرى إضافة إلى زيادة عدد الحروف التى يولدها
-              التطبيق.
-            </p>
-          </div>
-        </div>
-        <div class="fif-absolute-489">
-          <img src="./assets/images/man.png" />
-        </div>
-        <div class="fif-grr-30 show-mobile">&nbsp;</div>
-        <div class="fif-gray-206">&nbsp;</div>
-        <div class="fif-absolute-489-l">
-          <img src="./assets/images/female.png" />
-        </div>
-      </div>
-    </div>
-    <!-- Footer Area -->
-    <footer class="footer-area">
-      <div class="container pt-10 pb-0">
-        <div class="row mt-1">
-          <div class="col">
-            <div class="footer-widget ps-1 pt-3">
-              <ul class="footer-contact">
-                <li>
-                  <div class="content">
-                    <a href="home.html"><span>من نحن؟</span></a>
-                  </div>
-                </li>
-                <li>
-                  <div class="content">
-                    <a href="faq.html"><span>أسئلة شائعة؟</span></a>
-                  </div>
-                </li>
-                <li>
-                  <div class="content">
-                    <a href="customer-review.html"><span>آراء العملاء</span></a>
-                  </div>
-                </li>
+              <div class="mt-110 hide-mobile">&nbsp;</div>
 
-                <li>
-                  <div class="content">
-                    <a href="contact-us.html"> <span>تواصل معنا</span></a>
-                  </div>
-                </li>
-                <li>
-                  <div class="content">
-                    <a href="app.html"> <span>حمل التطبيق</span></a>
-                  </div>
-                </li>
-              </ul>
-            </div>
-          </div>
-          <div class="col">
-            <div class="copyright-area">
-              <div class="container">
-                <div class="footer-widget pb-0 text-center">
-                  <ul class="social-link">
-                    <li>
-                      <a href="https://www.facebook.com/" target="_blank">
-                        <img
-                          src="assets/images/instagram.png"
-                          class="instagram"
-                          alt="instagram"
-                        />
-                      </a>
-                    </li>
-                    <li>
-                      <a href="https://www.facebook.com/" target="_blank">
-                        <img
-                          src="assets/images/twitter.png"
-                          class="twitter"
-                          alt="Twitter"
-                        />
-                      </a>
-                    </li>
-                    <li>
-                      <a href="https://www.facebook.com/" target="_blank">
-                        <img
-                          src="assets/images/google-play.png"
-                          class="google-store"
-                          alt="google store"
-                        />
-                      </a>
-                    </li>
-                    <li>
-                      <a href="https://www.facebook.com/" target="_blank">
-                        <img
-                          src="assets/images/apple-play.png"
-                          class="apple-store"
-                          alt="apple store"
-                        />
-                      </a>
-                    </li>
-                  </ul>
-                </div>
-                <div class="copy-right-text text-center">
-                  <p>www.hmf.sa</p>
-                </div>
+              <div class="section-title text-center pl-250 mt-rs-20">
+                <span class="header-text header-text-home">من نحن؟</span>
+
+                <p class="text-26-home">
+                  إن HMF تطبيق يقدم لكم لأول مرة أكبر تجمع للأسر المنتجة لأجود
+                  المنتجات الغذائية، من خلالنا تستطيع تقديم خدمات تجارية ناجحة و
+                  مربحة. نساعدكم في الوصول لأشهى وأطيب الأطباق المحضرة منزلياً
+                  على بعد أمتار منكم نود أن نشارككم اللحظة الفريدة لتذوق ما تبرع
+                  في صنعه الأيادي الماهرة.
+                </p>
               </div>
             </div>
           </div>
+        </div>
 
-          <div class="col">
-            <div class="footer-widget text-end">
-              <div class="footer-logo">
-                <a href="index.html">
+        <div class="home-green-30">&nbsp;</div>
+        <div class="home-gray-30">&nbsp;</div>
+      </div>
+
+      <div class="featured-area pt-100 mb-100 pb-70">
+        <div class="container">
+          <div class="third-top-img">
+            <img
+              src="./assets/images/third-top.png"
+              class="thi-t-img"
+              alt="img"
+            />
+          </div>
+          <div class="row align-items-center mb-45">
+            <div class="col-lg-12 col-md-12">
+              <div class="third-g-30">&nbsp;</div>
+              <div class="mt-100 hide-mobile">&nbsp;</div>
+              <div class="mt-140 show-mobile">&nbsp;</div>
+              <div class="mt-1 show-mobile">&nbsp;</div>
+              <div class="mt-1 show-mobile">&nbsp;</div>
+              <div class="mt-1 show-mobile">&nbsp;</div>
+              <div class="section-title pt-100 text-center mt-rs-20">
+                <span class="header-text-second">أسئلة شائعة ؟</span>
+                <div class="f-left-home-arrow">
                   <img
-                    src="assets/images/footer-logo.png"
-                    class="img-w-146"
-                    alt="Images"
+                    src="./assets/images/right.png"
+                    class="f-left-home-arrow-img"
+                    alt="img"
                   />
-                </a>
+                </div>
+                <div class="f-right-home-arrow">
+                  <img
+                    src="./assets/images/right.png"
+                    class="f-right-home-arrow-img"
+                    alt="img"
+                  />
+                </div>
+                <h1 class="des">هل HMF تطبيق لتوصيل الطعام؟</h1>
+                <div class="fourth-img-des">
+                  <img
+                    src="./assets/images/fourth-img.png"
+                    class="fourth-w"
+                    alt="img"
+                  />
+                </div>
+                <p class="text-26-des">
+                  نعمل كوسيط بين الأسر المنتجة والعميل وقد تتوفر لدى بعض الأسر
+                  المنتجة خدمة التوصيل، نقوم بتسهيل عملية التواصل، وتنتهي
+                  معاناتك في البحث عن طعام منزلي بجودة ممتازة بضغطة زر واحدة.
+                </p>
+                <div class="fourth-des-text">
+                  <img
+                    src="./assets/images/fourth.png"
+                    class="fourth-des-width"
+                    alt="img"
+                  />
+                </div>
+                <div class="img-green-home">&nbsp;</div>
               </div>
+              <div class="home-green-sec-30">&nbsp;</div>
+              <div class="img-gray-home hide-mobile">&nbsp;</div>
             </div>
           </div>
         </div>
       </div>
-    </footer>
+      <div class="testimonials-area pb-100 mb-5">
+        <div class="container">
+          <div class="fif-gr-30">&nbsp;</div>
+          <div class="section-title mb-45 slider-home-testimonial text-center">
+            أراء العملاء
+          </div>
+          <div class="testimonials-slider owl-carousel owl-theme">
+            <div class="testimonials-item">
+              <img src="assets/images/pic.png" alt="testimonials" />
+              <h1 class="text-center testimonial-header-text">username</h1>
+              <p>
+                هذا النص هو مثال لنص يمكن أن يستبدل في نفس المساحة، لقد تم توليد
+                هذا النص من مولد النص العربى، حيث يمكنك أن تولد مثل هذا النص أو
+                العديد من النصوص الأخرى إضافة إلى زيادة عدد الحروف التى يولدها
+                التطبيق.
+              </p>
+            </div>
+            <div class="testimonials-item">
+              <img src="assets/images/pic.png" alt="testimonials" />
+              <h1 class="text-center testimonial-header-text">username</h1>
+              <p>
+                هذا النص هو مثال لنص يمكن أن يستبدل في نفس المساحة، لقد تم توليد
+                هذا النص من مولد النص العربى، حيث يمكنك أن تولد مثل هذا النص أو
+                العديد من النصوص الأخرى إضافة إلى زيادة عدد الحروف التى يولدها
+                التطبيق.
+              </p>
+            </div>
+          </div>
+          <div class="fif-absolute-489">
+            <img src="./assets/images/man.png" />
+          </div>
+          <div class="fif-grr-30 show-mobile">&nbsp;</div>
+          <div class="fif-gray-206">&nbsp;</div>
+          <div class="fif-absolute-489-l">
+            <img src="./assets/images/female.png" />
+          </div>
+        </div>
+      </div>
+      <!-- Footer Area -->
+      <footer class="footer-area">
+        <div class="container pt-10 pb-0">
+          <div class="row mt-1">
+            <div class="col">
+              <div class="footer-widget ps-1 pt-3">
+                <ul class="footer-contact">
+                  <li>
+                    <div class="content">
+                      <a href="home.html"><span>من نحن؟</span></a>
+                    </div>
+                  </li>
+                  <li>
+                    <div class="content">
+                      <a href="faq.html"><span>أسئلة شائعة؟</span></a>
+                    </div>
+                  </li>
+                  <li>
+                    <div class="content">
+                      <a href="customer-review.html"
+                        ><span>آراء العملاء</span></a
+                      >
+                    </div>
+                  </li>
+
+                  <li>
+                    <div class="content">
+                      <a href="contact-us.html"> <span>تواصل معنا</span></a>
+                    </div>
+                  </li>
+                  <li>
+                    <div class="content">
+                      <a href="app.html"> <span>حمل التطبيق</span></a>
+                    </div>
+                  </li>
+                </ul>
+              </div>
+            </div>
+            <div class="col">
+              <div class="copyright-area">
+                <div class="container">
+                  <div class="footer-widget pb-0 text-center">
+                    <ul class="social-link">
+                      <li>
+                        <a href="https://www.facebook.com/" target="_blank">
+                          <img
+                            src="assets/images/instagram.png"
+                            class="instagram"
+                            alt="instagram"
+                          />
+                        </a>
+                      </li>
+                      <li>
+                        <a href="https://www.facebook.com/" target="_blank">
+                          <img
+                            src="assets/images/twitter.png"
+                            class="twitter"
+                            alt="Twitter"
+                          />
+                        </a>
+                      </li>
+                      <li>
+                        <a href="https://www.facebook.com/" target="_blank">
+                          <img
+                            src="assets/images/google-play.png"
+                            class="google-store"
+                            alt="google store"
+                          />
+                        </a>
+                      </li>
+                      <li>
+                        <a href="https://www.facebook.com/" target="_blank">
+                          <img
+                            src="assets/images/apple-play.png"
+                            class="apple-store"
+                            alt="apple store"
+                          />
+                        </a>
+                      </li>
+                    </ul>
+                  </div>
+                  <div class="copy-right-text text-center">
+                    <p>www.hmf.sa</p>
+                  </div>
+                </div>
+              </div>
+            </div>
+
+            <div class="col">
+              <div class="footer-widget text-end">
+                <div class="footer-logo">
+                  <a href="index.html">
+                    <img
+                      src="assets/images/footer-logo.png"
+                      class="img-w-146"
+                      alt="Images"
+                    />
+                  </a>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </footer>
+    </div>
     <!-- Footer Area End -->
 
     <!-- Jquery Min JS -->
